--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
+    "target": "es5",
     "module": "commonjs",
+    "allowJs": true,
+    "checkJs": true,
+    "noEmit": true,
+    "strict": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es6",
-    "noImplicitAny": true,
-    "moduleResolution": "node"
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   }
 }
